pruebas funciones tp

--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,135 +58,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 63 0\n",
-      "1 63 0\n",
-      "2 63 0\n",
-      "3 63 0\n",
-      "4 63 0\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 61 1\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "4 61 1\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 49 2\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "2 61 1\n",
-      "3 63 0\n",
-      "4 63 0\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 61 1\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "4 61 1\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 49 2\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "1 61 1\n",
-      "2 63 0\n",
-      "3 63 0\n",
-      "4 63 0\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 61 1\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "4 61 1\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 49 2\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "2 49 2\n",
-      "3 63 0\n",
-      "4 63 0\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 61 1\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "4 61 1\n",
-      "5 63 0\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "5 49 2\n",
-      "6 63 0\n",
-      "7 63 0\n",
-      "8 63 0\n",
-      "9 63 0\n",
-      "9 61 1\n",
-      "190\n"
+      "0 90 0\n",
+      "1 90 0\n",
+      "2 90 0\n",
+      "3 90 0\n",
+      "4 90 0\n",
+      "5 90 0\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 1\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 2\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 3\n",
+      "9 90 0\n",
+      "9 90 4\n",
+      "4 100 1\n",
+      "5 90 0\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 1\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 2\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 3\n",
+      "9 90 0\n",
+      "9 90 4\n",
+      "5 90 2\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 3\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 4\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 5\n",
+      "9 90 0\n",
+      "9 90 6\n",
+      "2 100 1\n",
+      "3 90 0\n",
+      "4 90 0\n",
+      "5 90 0\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 1\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 2\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 3\n",
+      "9 90 0\n",
+      "9 90 4\n",
+      "4 100 1\n",
+      "5 90 0\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 1\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 2\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 3\n",
+      "9 90 0\n",
+      "9 90 4\n",
+      "5 90 2\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 3\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 4\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 5\n",
+      "9 90 0\n",
+      "9 90 6\n",
+      "3 90 2\n",
+      "4 90 0\n",
+      "5 90 0\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 1\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 2\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 3\n",
+      "9 90 0\n",
+      "9 90 4\n",
+      "4 100 3\n",
+      "5 90 0\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 1\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 2\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 3\n",
+      "9 90 0\n",
+      "9 90 4\n",
+      "5 90 4\n",
+      "6 90 0\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "6 100 5\n",
+      "7 90 0\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 1\n",
+      "9 90 0\n",
+      "9 90 2\n",
+      "7 90 6\n",
+      "8 90 0\n",
+      "9 90 0\n",
+      "8 100 7\n",
+      "9 90 0\n",
+      "9 90 8\n",
+      "850\n"
      ]
     }
    ],
    "source": [
     "# no esta bien, pero es una idea\n",
-    "ganancias, energias = obtener_ganancias_y_energias(path_10)\n",
+    "ganancias, energias = obtener_ganancias_y_energias(path_10_todo_entreno)\n",
     "def obtener_mayor_ganancia(dia, energia, dias_entrenados, cant_dias):\n",
     "  print(dia, energia, dias_entrenados)\n",
     "  if dia == cant_dias:\n",
@@ -195,6 +282,221 @@
     "  return max(obtener_mayor_ganancia(dia+1, energias[0], 0, cant_dias), obtener_mayor_ganancia(dia+1, energias[dias_entrenados+1],dias_entrenados+1,  cant_dias) + ganancias[dia] if energia >= ganancias[dia] else energia)\n",
     "\n",
     "print(obtener_mayor_ganancia(0, energias[0], 0, 9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ganacia_dia(ganancias, energias, dia, dias_no_entrenados):\n",
+    "  return ganancias[dia] if energias[dias_no_entrenados] >= ganancias[dia] else energias[dias_no_entrenados]\n",
+    "\n",
+    "def ganancias_obtenidas(ganancias, energias,resultados):\n",
+    "  dias_no_entrenados = 0\n",
+    "  suma = 0\n",
+    "  cantidad_dias = len(ganancias)\n",
+    "  for dia in range(0,cantidad_dias-2):\n",
+    "    # suma si entreno hoy\n",
+    "    # hoy_entreno = dias_no_entrenados\n",
+    "    suma_entrenando = ganacia_dia(ganancias, energias, dia, dias_no_entrenados)\n",
+    "    # max entre la permutacion de ENTRENO ENTRENO DESCANSO - ENTRENO DESCANSO ENTRENO - DESCANSO ENTRENO ENTRENO - ENTRENO ENTRENO ENTRENO\n",
+    "    entreno_tres_dias = 0\n",
+    "    entreno_descanso_entreno = 0\n",
+    "    entreno_entreno_descanso = 0\n",
+    "    descanso_entreno_entreno = 0\n",
+    "    suma_entrenando += max(entreno_tres_dias, entreno_descanso_entreno, entreno_entreno_descanso, descanso_entreno_entreno)\n",
+    "\n",
+    "    \n",
+    "    # max entre no entrenar mañana pero si pasado o entrenar mañana y pasado\n",
+    "    # suma_entrenando += max(ganancias[dia+1], ganancias[dia+2])\n",
+    "    # for i in range(dia+1,dia+3):\n",
+    "    #   energia_disponible = energias[hoy_entreno]\n",
+    "    #   suma_entrenando += ganancias[i] if energia_disponible >= ganancias[i] else energia_disponible\n",
+    "    #   hoy_entreno += 1\n",
+    "\n",
+    "    # suma si no entreno hoy\n",
+    "    # energia_disponible = energias[0]\n",
+    "    # max entre entrenar mañana y pasado\n",
+    "    # max entre la permutacion de ENTRENO ENTRENO DESCANSO - ENTRENO DESCANSO ENTRENO - ENTRENO ENTRENO ENTRENO\n",
+    "    suma_no_entrenando = ganacia_dia(ganancias, energias, dia+1, 0)\n",
+    "    suma_no_entrenando += ganacia_dia(ganancias, energias, dia+2, 1)\n",
+    "    # for i in range(dia+1,dia+3):\n",
+    "    #   energia_disponible = energias[hoy_no_entreno]\n",
+    "    #   suma_no_entrenando += ganancias[i] if energia_disponible >= ganancias[i] else energia_disponible\n",
+    "    #   hoy_no_entreno += 1\n",
+    "    if dia == 14:\n",
+    "      print(suma_entrenando, suma_no_entrenando)\n",
+    "\n",
+    "    if suma_entrenando > suma_no_entrenando:\n",
+    "      suma += ganacia_dia(ganancias, energias, dia, dias_no_entrenados)\n",
+    "      dias_no_entrenados += 1\n",
+    "      resultados.append(\"Entreno\")\n",
+    "      # print(\"ENTRENO\")\n",
+    "    else:\n",
+    "      dias_no_entrenados = 0\n",
+    "      resultados.append(\"Descanso\")\n",
+    "      # print(\"NO ENTRENO\")\n",
+    "\n",
+    "\n",
+    "  dia = cantidad_dias-2\n",
+    "  ganancia_actual = ganancias[dia] if energias[dias_no_entrenados] >= ganancias[dia] else energias[dias_no_entrenados]\n",
+    "  ganancia_proxima = ganancias[dia+1] if energias[dias_no_entrenados+1] >= ganancias[dia+1] else energias[dias_no_entrenados+1]\n",
+    "  ganancia_posible = ganancias[dia+1] if energias[0] >= ganancias[dia+1] else energias[0]\n",
+    "  if (ganancia_actual + ganancia_proxima > ganancia_posible):\n",
+    "    suma = suma + ganancia_actual + ganancia_proxima\n",
+    "    resultados.append(\"Entreno\")\n",
+    "    resultados.append(\"Entreno\")\n",
+    "    # print(\"ENTRENO\\nENTRENO\")\n",
+    "  else:\n",
+    "    suma = suma + ganancia_posible\n",
+    "    resultados.append(\"Entreno\")\n",
+    "    resultados.append(\"Descanso\")\n",
+    "    # print(\"NO ENTRENO\\nENTRENO\")\n",
+    "  \n",
+    "  return suma\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ganacia_dia(ganancias, energias, dia, dias_no_entrenados):\n",
+    "  return ganancias[dia] if energias[dias_no_entrenados] >= ganancias[dia] else energias[dias_no_entrenados]\n",
+    "\n",
+    "def ganancias_dias_subsiguientes(ganancias, energias, dia, dias_no_entrenados, dia_no_entreno):\n",
+    "  suma = 0\n",
+    "  dias_no_entrenados_aux = dias_no_entrenados\n",
+    "  for i in range(dia+1,dia+4):\n",
+    "    if i == dia_no_entreno:\n",
+    "      dias_no_entrenados_aux = 0\n",
+    "      continue\n",
+    "    suma += ganacia_dia(ganancias, energias, i, dias_no_entrenados_aux)\n",
+    "    dias_no_entrenados_aux += 1\n",
+    "\n",
+    "  return suma\n",
+    "\n",
+    "def ganancias_obtenidas_V2(ganancias, energias,resultados):\n",
+    "  dias_no_entrenados = 0\n",
+    "  suma = 0\n",
+    "  cantidad_dias = len(ganancias)\n",
+    "  for dia in range(0,cantidad_dias-3):\n",
+    "    # suma si entreno hoy\n",
+    "    suma_entrenando = ganacia_dia(ganancias, energias, dia, dias_no_entrenados)\n",
+    "\n",
+    "    # max entre la permutacion de ENTRENO ENTRENO DESCANSO - ENTRENO DESCANSO ENTRENO - DESCANSO ENTRENO ENTRENO - ENTRENO ENTRENO ENTRENO\n",
+    "    entreno_tres_dias = ganancias_dias_subsiguientes(ganancias, energias, dia, dias_no_entrenados+1, -1)\n",
+    "    entreno_descanso_entreno =  ganancias_dias_subsiguientes(ganancias, energias, dia, dias_no_entrenados+1, dia+2)\n",
+    "    entreno_entreno_descanso =  ganancias_dias_subsiguientes(ganancias, energias, dia, dias_no_entrenados+1, dia+3)\n",
+    "    descanso_entreno_entreno =  ganancias_dias_subsiguientes(ganancias, energias, dia, dias_no_entrenados+1, dia+1)\n",
+    "    suma_entrenando += max(entreno_tres_dias, entreno_descanso_entreno, entreno_entreno_descanso, descanso_entreno_entreno)\n",
+    "\n",
+    "    # suma si no entreno hoy\n",
+    "    # max entre la permutacion de ENTRENO ENTRENO DESCANSO - ENTRENO DESCANSO ENTRENO - ENTRENO ENTRENO ENTRENO\n",
+    "    entreno_tres_dias = ganancias_dias_subsiguientes(ganancias, energias, dia, 0, -1)\n",
+    "    entreno_descanso_entreno =  ganancias_dias_subsiguientes(ganancias, energias, dia, 0, dia+2)\n",
+    "    entreno_entreno_descanso =  ganancias_dias_subsiguientes(ganancias, energias, dia, 0, dia+3)\n",
+    "    suma_no_entrenando = ganacia_dia(ganancias, energias, dia+1, 0)\n",
+    "    suma_no_entrenando += max(entreno_tres_dias, entreno_descanso_entreno, entreno_entreno_descanso)\n",
+    "   \n",
+    "    if dia == 14:\n",
+    "      print(suma_entrenando, suma_no_entrenando)\n",
+    "\n",
+    "    if suma_entrenando > suma_no_entrenando:\n",
+    "      suma += ganacia_dia(ganancias, energias, dia, dias_no_entrenados)\n",
+    "      dias_no_entrenados += 1\n",
+    "      resultados.append(\"Entreno\")\n",
+    "      # print(\"ENTRENO\")\n",
+    "    else:\n",
+    "      dias_no_entrenados = 0\n",
+    "      resultados.append(\"Descanso\")\n",
+    "      # print(\"NO ENTRENO\")\n",
+    "    \n",
+    "    if (i == cantidad_dias-4):\n",
+    "      suma += max(suma_entrenando, suma_no_entrenando)\n",
+    "\n",
+    "\n",
+    "  # dia = cantidad_dias-2\n",
+    "  # ganancia_actual = ganancias[dia] if energias[dias_no_entrenados] >= ganancias[dia] else energias[dias_no_entrenados]\n",
+    "  # ganancia_proxima = ganancias[dia+1] if energias[dias_no_entrenados+1] >= ganancias[dia+1] else energias[dias_no_entrenados+1]\n",
+    "  # ganancia_posible = ganancias[dia+1] if energias[0] >= ganancias[dia+1] else energias[0]\n",
+    "  # if (ganancia_actual + ganancia_proxima > ganancia_posible):\n",
+    "  #   suma = suma + ganancia_actual + ganancia_proxima\n",
+    "  #   resultados.append(\"Entreno\")\n",
+    "  #   resultados.append(\"Entreno\")\n",
+    "  #   # print(\"ENTRENO\\nENTRENO\")\n",
+    "  # else:\n",
+    "  #   suma = suma + ganancia_posible\n",
+    "  #   resultados.append(\"Entreno\")\n",
+    "  #   resultados.append(\"Descanso\")\n",
+    "  #   # print(\"NO ENTRENO\\nENTRENO\")\n",
+    "  \n",
+    "  return suma\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "177 215\n",
+      "591\n"
+     ]
+    }
+   ],
+   "source": [
+    "ganancias, energias = obtener_ganancias_y_energias(path_50)\n",
+    "resultados = []\n",
+    "print(ganancias_obtenidas_V2(ganancias, energias, resultados))    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variables = \"Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Descanso, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno, Descanso, Entreno, Entreno, Entreno\"\n",
+    "resultados_esperados = variables.split(\", \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR en el dia 14 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 16 deberia ser Descanso y es Entreno\n",
+      "ERROR en el dia 18 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 20 deberia ser Descanso y es Entreno\n",
+      "ERROR en el dia 29 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 30 deberia ser Descanso y es Entreno\n",
+      "ERROR en el dia 32 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 34 deberia ser Descanso y es Entreno\n",
+      "ERROR en el dia 35 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 41 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 42 deberia ser Descanso y es Entreno\n",
+      "ERROR en el dia 44 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 46 deberia ser Descanso y es Entreno\n",
+      "ERROR en el dia 47 deberia ser Entreno y es Descanso\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(resultados)):\n",
+    "  if resultados[i] != resultados_esperados[i]:\n",
+    "    print(\"ERROR en el dia \" + str(i) + \" deberia ser \" + resultados_esperados[i] + \" y es \" + resultados[i])"
    ]
   }
  ],
