--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,12 +360,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ganacia_dia(ganancias, energias, dia, dias_no_entrenados):\n",
-    "  return ganancias[dia] if energias[dias_no_entrenados] >= ganancias[dia] else energias[dias_no_entrenados]\n",
+    "  return min(ganancias[dia], energias[dias_no_entrenados])\n",
     "\n",
     "def ganancias_dias_subsiguientes(ganancias, energias, dia, dias_no_entrenados, dia_no_entreno):\n",
     "  suma = 0\n",
@@ -399,8 +399,7 @@
     "    entreno_tres_dias = ganancias_dias_subsiguientes(ganancias, energias, dia, 0, -1)\n",
     "    entreno_descanso_entreno =  ganancias_dias_subsiguientes(ganancias, energias, dia, 0, dia+2)\n",
     "    entreno_entreno_descanso =  ganancias_dias_subsiguientes(ganancias, energias, dia, 0, dia+3)\n",
-    "    suma_no_entrenando = ganacia_dia(ganancias, energias, dia+1, 0)\n",
-    "    suma_no_entrenando += max(entreno_tres_dias, entreno_descanso_entreno, entreno_entreno_descanso)\n",
+    "    suma_no_entrenando = max(entreno_tres_dias, entreno_descanso_entreno, entreno_entreno_descanso)\n",
     "   \n",
     "    if dia == 14:\n",
     "      print(suma_entrenando, suma_no_entrenando)\n",
@@ -415,7 +414,7 @@
     "      resultados.append(\"Descanso\")\n",
     "      # print(\"NO ENTRENO\")\n",
     "    \n",
-    "    if (i == cantidad_dias-4):\n",
+    "    if (dia == cantidad_dias-4):\n",
     "      suma += max(suma_entrenando, suma_no_entrenando)\n",
     "\n",
     "\n",
@@ -439,27 +438,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ganancias_obtenidas_V3(ganancias, energias):\n",
+    "  suma = 0\n",
+    "  cantidad_dias = len(ganancias)\n",
+    "  ganancias_por_dia = [0]*cantidad_dias\n",
+    "  ganancias_por_dia[0] = ganacia_dia(ganancias, energias, 0, 0)\n",
+    "  ganancias_por_dia[1] = max(ganacia_dia(ganancias, energias, 1, 1) + ganancias_por_dia[0], ganacia_dia(ganancias, energias, 1, 0))\n",
+    "  dias_entrenados = 0 if ganancias_por_dia[0] == ganancias_por_dia[1] else 1\n",
+    "\n",
+    "  for dia in range(2, cantidad_dias):\n",
+    "    ganancia_maxima = ganacia_dia(ganancias, energias, dia, 0)\n",
+    "    ganancia_actual = ganacia_dia(ganancias, energias, dia, dias_entrenados)\n",
+    "    if (ganancia_maxima > ganancia_actual):\n",
+    "      # llegue sin entrenar\n",
+    "      ganancias_por_dia[dia-1] = ganancias_por_dia[dia-2]\n",
+    "      ganancias_por_dia[dia] = ganancias_por_dia[dia-2] + ganancia_maxima\n",
+    "      dias_entrenados = 1\n",
+    "      print(\"llegue sin entrenar\")\n",
+    "    else:\n",
+    "      ganancias_por_dia[dia] = ganancias_por_dia[dia-1] + ganancia_actual\n",
+    "      dias_entrenados += 1\n",
+    "    print(ganancias_por_dia)\n",
+    "  #  36 2 78 19 -59 76 65 64 33 41 \n",
+    "  #  63 61 -49 41 40 38 23 17 13 10\n",
+    "  return ganancias_por_dia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "177 215\n",
-      "591\n"
+      "llegue sin entrenar\n",
+      "[36, 36, 99, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[36, 36, 99, 118, 0, 0, 0, 0, 0, 0]\n",
+      "llegue sin entrenar\n",
+      "[36, 36, 99, 99, 158, 0, 0, 0, 0, 0]\n",
+      "llegue sin entrenar\n",
+      "[36, 36, 99, 99, 99, 162, 0, 0, 0, 0]\n",
+      "llegue sin entrenar\n",
+      "[36, 36, 99, 99, 99, 99, 162, 0, 0, 0]\n",
+      "llegue sin entrenar\n",
+      "[36, 36, 99, 99, 99, 99, 99, 162, 0, 0]\n",
+      "[36, 36, 99, 99, 99, 99, 99, 162, 195, 0]\n",
+      "[36, 36, 99, 99, 99, 99, 99, 162, 195, 236]\n",
+      "[36, 36, 99, 99, 99, 99, 99, 162, 195, 236]\n"
      ]
     }
    ],
    "source": [
-    "ganancias, energias = obtener_ganancias_y_energias(path_50)\n",
+    "\n",
+    "ganancias, energias = obtener_ganancias_y_energias(path_10)\n",
     "resultados = []\n",
-    "print(ganancias_obtenidas_V2(ganancias, energias, resultados))    \n"
+    "print(ganancias_obtenidas_V3(ganancias, energias))  \n",
+    "  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -477,19 +522,18 @@
      "output_type": "stream",
      "text": [
       "ERROR en el dia 14 deberia ser Entreno y es Descanso\n",
-      "ERROR en el dia 16 deberia ser Descanso y es Entreno\n",
       "ERROR en el dia 18 deberia ser Entreno y es Descanso\n",
-      "ERROR en el dia 20 deberia ser Descanso y es Entreno\n",
       "ERROR en el dia 29 deberia ser Entreno y es Descanso\n",
       "ERROR en el dia 30 deberia ser Descanso y es Entreno\n",
       "ERROR en el dia 32 deberia ser Entreno y es Descanso\n",
       "ERROR en el dia 34 deberia ser Descanso y es Entreno\n",
       "ERROR en el dia 35 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 37 deberia ser Entreno y es Descanso\n",
+      "ERROR en el dia 38 deberia ser Descanso y es Entreno\n",
       "ERROR en el dia 41 deberia ser Entreno y es Descanso\n",
       "ERROR en el dia 42 deberia ser Descanso y es Entreno\n",
       "ERROR en el dia 44 deberia ser Entreno y es Descanso\n",
-      "ERROR en el dia 46 deberia ser Descanso y es Entreno\n",
-      "ERROR en el dia 47 deberia ser Entreno y es Descanso\n"
+      "ERROR en el dia 46 deberia ser Descanso y es Entreno\n"
      ]
     }
    ],
@@ -497,6 +541,59 @@
     "for i in range(0, len(resultados)):\n",
     "  if resultados[i] != resultados_esperados[i]:\n",
     "    print(\"ERROR en el dia \" + str(i) + \" deberia ser \" + resultados_esperados[i] + \" y es \" + resultados[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## VERSION FINAL FINAL\n",
+    "def ganacia_dia_actual(ganancias, energias, dia, dias_entrenados):\n",
+    "  return min(ganancias[dia], energias[dias_entrenados])\n",
+    "\n",
+    "\n",
+    "def ganancia_obtenida_V4(ganancias, energias):\n",
+    "\n",
+    "  cantidad_dias = len(ganancias)\n",
+    "\n",
+    "  ganancias_obtenidas = [[0] * cantidad_dias for _ in range(cantidad_dias)] # mejorar en espacio ya que la mitad de mi matriz van a ser 0\n",
+    "  dias_entrenados = 2\n",
+    "  ganancias_obtenidas[0][0] = ganacia_dia_actual(ganancias, energias, 0, 0)\n",
+    "  ganancias_obtenidas[1][0] = ganacia_dia_actual(ganancias, energias, 1, 0)\n",
+    "  ganancias_obtenidas[1][1] = ganacia_dia_actual(ganancias, energias, 1, 1) + ganancias_obtenidas[0][0]\n",
+    "  \n",
+    "  for dia in range(2, cantidad_dias):\n",
+    "    ganancias_obtenidas[dia][0] = ganacia_dia_actual(ganancias, energias, dia, 0)\n",
+    "\n",
+    "  for dia in range(2, cantidad_dias):\n",
+    "    ganancias_obtenidas[dia][0] += max(ganancias_obtenidas[dia-2])\n",
+    "    for dia_entrenado in range(1, dias_entrenados+1):\n",
+    "      ganancias_obtenidas[dia][dia_entrenado] = ganacia_dia_actual(ganancias, energias, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
+    "    dias_entrenados += 1\n",
+    "  return max(ganancias_obtenidas[cantidad_dias-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "279175\n"
+     ]
+    }
+   ],
+   "source": [
+    "ganancias, energias = obtener_ganancias_y_energias(path_5000)\n",
+    "resultados = [] \n",
+    "# 75 77 -54 36 78 36 44 77 48 65 \n",
+    "# 74 -69 65 65 64 37 23 22 22 7\n",
+    "print(ganancia_obtenida_V4(ganancias, energias))  "
    ]
   }
  ],
