--- a/TP2/TP2.ipynb
+++ b/TP2/TP2.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
     "\n",
     "  cantidad_dias = len(ganancias)\n",
     "\n",
-    "  ganancias_obtenidas = [[0] * cantidad_dias for _ in range(cantidad_dias)] # mejorar en espacio ya que la mitad de mi matriz van a ser 0\n",
+    "  ganancias_obtenidas = [[0] * cantidad_dias for _ in range(cantidad_dias)]\n",
     "  dias_entrenados = 2\n",
     "  ganancias_obtenidas[0][0] = ganacia_dia_actual(ganancias, energias, 0, 0)\n",
     "  ganancias_obtenidas[1][0] = ganacia_dia_actual(ganancias, energias, 1, 0)\n",
@@ -572,24 +572,26 @@
     "    for dia_entrenado in range(1, dias_entrenados+1):\n",
     "      ganancias_obtenidas[dia][dia_entrenado] = ganacia_dia_actual(ganancias, energias, dia, dia_entrenado) + ganancias_obtenidas[dia-1][dia_entrenado-1]\n",
     "    dias_entrenados += 1\n",
+    "  print(ganancias_obtenidas)\n",
     "  return max(ganancias_obtenidas[cantidad_dias-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "279175\n"
+      "[[36, 0, 0, 0, 0, 0, 0, 0, 0, 0], [2, 38, 0, 0, 0, 0, 0, 0, 0, 0], [99, 63, 87, 0, 0, 0, 0, 0, 0, 0], [57, 118, 82, 106, 0, 0, 0, 0, 0, 0], [158, 116, 167, 123, 146, 0, 0, 0, 0, 0], [181, 219, 165, 208, 163, 184, 0, 0, 0, 0], [230, 242, 268, 206, 248, 201, 207, 0, 0, 0], [282, 291, 291, 309, 246, 286, 224, 224, 0, 0], [301, 315, 324, 324, 342, 279, 309, 241, 237, 0], [350, 342, 356, 365, 364, 380, 302, 326, 254, 247]]\n",
+      "380\n"
      ]
     }
    ],
    "source": [
-    "ganancias, energias = obtener_ganancias_y_energias(path_5000)\n",
+    "ganancias, energias = obtener_ganancias_y_energias(path_10)\n",
     "resultados = [] \n",
     "# 75 77 -54 36 78 36 44 77 48 65 \n",
     "# 74 -69 65 65 64 37 23 22 22 7\n",
